@@ -1,4 +1,5 @@
 21 Jan 2018
+fix: undefined vars in staffpanel.php
 remove: log queries from staff panel
 fix: anonymous username in popups
 remove: log queries
